--- a/DownBad.vbproj
+++ b/DownBad.vbproj
@@ -125,6 +125,72 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Mami%28perfection%29.ico" />
+    <None Include="Resources\IMG_0356[1].JPG" />
+    <None Include="Resources\IMG_0307[1].JPG" />
+    <None Include="Resources\IMG_0296[1].JPG" />
+    <None Include="Resources\IMG_0280[1].JPG" />
+    <None Include="Resources\IMG_0274[1].JPG" />
+    <None Include="Resources\IMG_0300[1].JPG" />
+    <None Include="Resources\IMG_0278[1].JPG" />
+    <None Include="Resources\IMG_0277[1].JPG" />
+    <None Include="Resources\IMG_0113[1].JPG" />
+    <None Include="Resources\IMG_0261[1].JPG" />
+    <None Include="Resources\IMG_0116[1].JPG" />
+    <None Include="Resources\IMG_1776[1].JPG" />
+    <None Include="Resources\IMG_1766[1].JPG" />
+    <None Include="Resources\IMG_1778[2].JPG" />
+    <None Include="Resources\IMG_1778[1]1.JPG" />
+    <None Include="Resources\IMG_1765[1].JPG" />
+    <None Include="Resources\IMG_1763[1].JPG" />
+    <None Include="Resources\IMG_1761[1].JPG" />
+    <None Include="Resources\IMG_1830[1].JPG" />
+    <None Include="Resources\IMG_1849[1].JPG" />
+    <None Include="Resources\IMG_1842[1].JPG" />
+    <None Include="Resources\IMG_1922[1].JPG" />
+    <None Include="Resources\IMG_1832[1].JPG" />
+    <None Include="Resources\IMG_1823[1].JPG" />
+    <None Include="Resources\IMG_1817[1].JPG" />
+    <None Include="Resources\IMG_1796[1].JPG" />
+    <None Include="Resources\IMG_1909[1].JPG" />
+    <None Include="Resources\IMG_1853[1].JPG" />
+    <None Include="Resources\IMG_1822[1].JPG" />
+    <None Include="Resources\IMG_1785[1].JPG" />
+    <None Include="Resources\IMG_1781[1].JPG" />
+    <None Include="Resources\IMG_1666[1].JPG" />
+    <None Include="Resources\IMG_1521[1].PNG" />
+    <None Include="Resources\IMG_1475[1].JPG" />
+    <None Include="Resources\IMG_0838[1].JPG" />
+    <None Include="Resources\IMG_1537[1].PNG" />
+    <None Include="Resources\IMG_0210[1].JPG" />
+    <None Include="Resources\IMG_0227[1].JPG" />
+    <None Include="Resources\IMG_0192[1].JPG" />
+    <None Include="Resources\IMG_0186[1].JPG" />
+    <None Include="Resources\IMG_0255[1].JPG" />
+    <None Include="Resources\IMG_0184[1].JPG" />
+    <None Include="Resources\IMG_0156[1].JPG" />
+    <None Include="Resources\IMG_0168[1].JPG" />
+    <None Include="Resources\IMG_0188[1].JPG" />
+    <None Include="Resources\IMG_0223[1].JPG" />
+    <None Include="Resources\IMG_0229[1].JPG" />
+    <None Include="Resources\IMG_0162[1].JPG" />
+    <None Include="Resources\IMG_0219[1].JPG" />
+    <None Include="Resources\IMG_0195[1].JPG" />
+    <None Include="Resources\IMG_0170[1].JPG" />
+    <None Include="Resources\IMG_0200[1].JPG" />
+    <None Include="Resources\IMG_0155[1].JPG" />
+    <None Include="Resources\IMG_0099[1].JPG" />
+    <None Include="Resources\IMG_0172[1].JPG" />
+    <None Include="Resources\IMG_0189[1].JPG" />
+    <None Include="Resources\IMG_0187[1].JPG" />
+    <None Include="Resources\IMG_0166[1].JPG" />
+    <None Include="Resources\IMG_0144[1].JPG" />
+    <None Include="Resources\IMG_0145[1].JPG" />
+    <None Include="Resources\IMG_0141[1].JPG" />
+    <None Include="Resources\IMG_0212[1].JPG" />
+    <None Include="Resources\IMG_0121[1].JPG" />
+    <None Include="Resources\IMG_0207[1].JPG" />
+    <None Include="Resources\IMG_0094[1].JPG" />
+    <None Include="Resources\IMG_0115[1].JPG" />
     <None Include="Resources\IMG_1997[1].JPG" />
     <None Include="Resources\IMG_1994[1].JPG" />
     <None Include="Resources\IMG_1993[1].JPG" />
